--- a/.project.json
+++ b/.project.json
@@ -32,16 +32,17 @@
     "defaultI18NPropertyFile": "i18n.properties",
     "resourceModelName": "i18n"
   },
-  "dataBinding": {
-    "/webapp/view/View1.view.xml": {
-      "entitySet": "Entity1_Set"
-    }
-  },
+  "dataBinding": {},
   "mockpreview": {
     "mockUri": "localService/metadata.xml",
     "metadataFilePath": "localService/metadata.xml",
     "loadJSONFiles": true,
     "loadCustomRequests": false,
     "mockRequestsFilePath": ""
+  },
+  "hcpdeploy": {
+    "account": "fiori",
+    "name": "configurewizard",
+    "entryPath": "webapp"
   }
 }
