--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -2,7 +2,7 @@
 	"_version": "1.1.0",
 	"sap.app": {
 		"_version": "1.1.0",
-		"id": "QuickStartApplication",
+		"id": "ConfigureWizard",
 		"type": "application",
 		"i18n": "i18n/i18n.properties",
 		"applicationVersion": {
@@ -48,7 +48,8 @@
 	"sap.ui5": {
 		"_version": "1.1.0",
 		"rootView": {
-			"viewName": "QuickStartApplication.view.View1",
+			"routerClass": "sap.m.routing.Router",
+			"viewName": "ConfigureWizard.view.App",
 			"type": "XML"
 		},
 		"dependencies": {
@@ -67,7 +68,7 @@
 			"i18n": {
 				"type": "sap.ui.model.resource.ResourceModel",
 				"settings": {
-					"bundleName": "QuickStartApplication.i18n.i18n"
+					"bundleName": "ConfigureWizard.i18n.i18n"
 				}
 			},
 			"": {
@@ -78,6 +79,33 @@
 			"css": [{
 				"uri": "css/style.css"
 			}]
+		},
+		"routing": {
+			"config": {
+				"viewPath": "ConfigureWizard.view",
+				"controlId": "rootControl",
+				"controlAggregation": "pages",
+				"viewType": "XML"
+			},
+			"routes": [	{
+						"name": "welcome",
+						"pattern": "",
+						"target": "welcome"
+					},{
+				"pattern": "page2",
+				"name": "page2",
+				"target": "page2"
+			}],
+			"targets": {
+					"welcome": {
+						"viewName": "Welcome",
+						"viewLevel": 0
+					},
+				"page2": {
+					"viewName": "Wizard",
+					"viewLevel": 1
+				}
+			}
 		}
 	}
 }
